# tauri_pdf

./: .gitignore  doc.html  doc.md  index-client.min.js  index.html  index.md  index.txt  package.json  svelte@5.2.8
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
